# catlog-based-conversational-agent

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  APPROACH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  build.sh  pyproject.toml  render.yaml  render_entry.py  requirements.txt
.githooks/: commit-msg
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: agent.py  llm.py  main.py  retrieval.py
data/: catalog.json
scripts/: fix_test_types.py  ingest.py  scrape_catalog.py  setup_db.py
tests/: test_agent.py
